--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,41 @@
 
+logo {
+  margin-top: 10%;
+}
+
+h1 {
+  text-align:center;
+}
+
+h2 {
+  text-align:center;
+}
+
+h3 {
+  text-align:center;
+}
+
+img {
+  border-radius: 8px;
+}
+
 
   .flex-container {
     display: flex;
-    background-color: rgb(108, 137, 199);
+    background-color: rgb(255, 255, 255);
+    /*position: relative*/
   }
-  
+
   .flex-container > div {
     /*background-color: #f1f1f1;*/
+    
     margin: 10px;
     height: 20px;
     padding: 35px;
-    font-size: 16px;
+    /*font-size: 16px;*/
     font-family: Roboto;
-  }
-
+    font-size: medium;
+   }
 
   /* Responsive layout - makes a one column-layout instead of two-column layout */
 @media (max-width: 600px) {
@@ -58,6 +80,7 @@
 
   .grid-container-main {
     display: grid;
+    grid-column-gap: 50px;
     grid-template-columns: auto 33% ;
     /*background-color: #2196F3;*/
     padding: 0px;
@@ -68,13 +91,14 @@
     padding: 20px;
     /*font-size: 12px;*/
     text-align: center;
+    margin-top: 35%;
   }
   
 
 
   .grid-container-blog {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 33% 33% 33%;
     /*background-color: #2196F3;*/
     padding: 10px;
   }
@@ -96,7 +120,7 @@
     padding: 10px;
   }
 
-  .grid-item {
+  .grid-item-propuesta {
     /*background-color: rgba(255, 255, 255, 0.8);*/
     /*border: 1px solid rgba(0, 0, 0, 0.8);*/
     padding: 10px;
@@ -113,12 +137,30 @@
     padding: 10px;
   }
 
-  .grid-item {
+  .grid-item-footer {
     background-color: rgba(255, 255, 255, 0.8);
     /*border: 1px solid rgba(0, 0, 0, 0.8);*/
-    padding: 10px;
-    /*font-size: 30px;*/
+    padding: 0px;
+    font-stretch: semi-condensed;
+    font-style: italic;
+    font-size: 10px;
     text-align: center;
+  }
+
+
+
+  div.grid-item-blog {
+    width: 90%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /*margin-bottom: 25px;*/
+  }
+
+  div.grid-item-propuesta {
+    width: 95%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /*margin-bottom: 25px;*/
   }
 
   
