--- a/styles.css
+++ b/styles.css
@@ -38,11 +38,23 @@ img {
    }
 
   /* Responsive layout - makes a one column-layout instead of two-column layout */
-@media (max-width: 600px) {
+@media (max-width: 800px) {
     .flex-container {
       flex-direction: column;
     }
   }
+
+  /*@media screen and (max-width: 800px) {
+    .flex-container2 {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+    } 
+
+  /*@media (max-width: 400px) {
+    .flex-container2 {
+      flex-direction: column;
+    }
+  }*/
 
   div.gallery {
     margin: 5px;
